--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.216", features = ["derive"] }
+serde-sarif = "0.6.6"
+serde_json = "1.0.133"
