--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.95"
 serde = { version = "1.0.216", features = ["derive"] }
 serde-sarif = "0.6.6"
 serde_json = "1.0.133"
